--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+
 @import 'react-big-calendar/lib/css/react-big-calendar.css';
 
 @tailwind base;
@@ -112,21 +113,23 @@
     @apply p-2 text-center font-semibold border-b text-muted-foreground capitalize;
   }
   .rbc-day-bg.rbc-off-range-bg {
-    @apply bg-background; /* Removes the gray background for other month's days */
+    @apply bg-background;
   }
   .rbc-day-bg.rbc-today {
      @apply bg-primary/10;
   }
   
   .rbc-event.rbc-event-custom, .rbc-day-slot .rbc-background-event.rbc-event-custom {
-    @apply p-0 rounded-lg border-l-4 transition-all duration-200 ease-in-out;
-    background-color: var(--event-bg-color);
-    border-color: var(--event-border-color);
-    color: var(--event-text-color);
+    @apply p-0 rounded-md border-l-4 transition-all duration-200 ease-in-out;
   }
 
   .rbc-event-custom {
-    @apply rounded-lg border-2 !important;
+    @apply rounded-md border-2;
+    @apply focus:outline-none ring-offset-background focus-visible:ring-2 focus-visible:ring-ring;
+  }
+  
+  .rbc-event:focus {
+      outline: none;
   }
 
   .rbc-time-view, .rbc-month-view {
@@ -142,16 +145,21 @@
   .rbc-time-slot {
       @apply border-t-0;
   }
+  
+  .rbc-timeslot-group {
+      @apply border-b;
+  }
+
   .rbc-time-gutter .rbc-timeslot-group {
       @apply border-b-0;
+  }
+  
+  .rbc-time-content > * > * > .rbc-time-slot:not(:first-child) {
+      @apply border-t-0; /* remove intra-hour lines */
   }
 
   .rbc-time-gutter .rbc-time-slot {
     @apply text-right pr-4 text-muted-foreground;
-  }
-
-  .rbc-timeslot-group {
-      @apply border-b;
   }
 
   .rbc-time-content > * + * > * {
