--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,6 +160,9 @@
   .rbc-day-slot .rbc-event {
     flex-wrap: nowrap !important;
     overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    display: flex;
   }
   
   .rbc-event, .rbc-day-slot .rbc-background-event {
@@ -171,66 +174,12 @@
     border-radius: 4px !important;
   }
 
-
-  .rbc-event:nth-child(1) {
-    background-color: #e2f8ff !important;
-  }
-  .dark .rbc-event:nth-child(1) {
-    background-color: #0c2e3b !important;
-  }
-
-  .rbc-event:nth-child(2) {
-    background-color: #fefce8 !important;
-  }
-  .dark .rbc-event:nth-child(2) {
-    background-color: #3b3a1d !important;
-  }
-
-  .rbc-event:nth-child(3) {
-    background-color: #f2f1ff !important;
-  }
-  .dark .rbc-event:nth-child(3) {
-    background-color: #2b294d !important;
-  }
-
-  .rbc-event:nth-child(4) {
-    background-color: #fdf2fb !important;
-  }
-   .dark .rbc-event:nth-child(4) {
-    background-color: #492844 !important;
-  }
-
-  .rbc-event:nth-child(5) {
-    background-color: #e2f8ff !important;
-  }
-  .dark .rbc-event:nth-child(5) {
-    background-color: #0c2e3b !important;
-  }
-
-  .rbc-event:nth-child(6) {
-    background-color: #fefce8 !important;
-  }
-  .dark .rbc-event:nth-child(6) {
-    background-color: #3b3a1d !important;
-  }
-  
-  .rbc-event:nth-child(7) {
-    background-color: #f2f1ff !important;
-  }
-  .dark .rbc-event:nth-child(7) {
-    background-color: #2b294d !important;
-  }
-
-  .rbc-event:nth-child(8) {
-    background-color: #fdf2fb !important;
-  }
-  .dark .rbc-event:nth-child(8) {
-    background-color: #492844 !important;
-  }
-
-
   .rbc-event-label {
     display: none !important;
+  }
+  
+  .rbc-event-content {
+    font-size: 0.8rem;
   }
 
   /* Default theme overrides */
