--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -194,7 +194,8 @@
   color: hsl(var(--foreground));
 }
 
-.rbc-event, .rbc-day-slot .rbc-background-event {
+.rbc-event,
+.rbc-day-slot .rbc-background-event {
   padding: 0.25rem;
   border-radius: 0.375rem;
   transition-property: all;
@@ -205,8 +206,7 @@
   display: flex !important;
   align-items: center;
   justify-content: center;
-  background-color: hsl(var(--primary)) !important;
-  color: hsl(var(--primary-foreground)) !important;
+  color: #515151 !important;
   flex-wrap: nowrap !important;
 }
 
@@ -261,5 +261,3 @@
 .rbc-time-view .rbc-time-slot:last-child {
   border-bottom: 1px solid hsl(var(--border));
 }
-
-  
